--- a/screenshots/service.yaml
+++ b/screenshots/service.yaml
@@ -3,11 +3,12 @@ kind: Service
 metadata:
   name: nginx-service
 spec:
-  type: NodePort
   selector:
     app: nginx
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
       nodePort: 30007
+  type: NodePort
 
